# evm-indexer

./: Cargo.toml  Dockerfile
.github/workflows/: docker-build.yml
config/: default.toml
src/: config.rs  main.rs
src/core/: block_processor.rs  blocks.rs  metrics.rs  mod.rs  storage.rs
src/models/: mod.rs
src/utils/: error.rs
