[package]
name = "eth-high-perf-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] } # Remove unused features
web3 = { version = "0.19", default-features = false } # Minimize features
arrow = { version = "54.0.0", default-features = false, features = ["json"] }
parquet = { version = "54.0.0", default-features = false }
bytes = "1.5"
crossbeam = "0.8"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.13"
config = "0.15.6"
thiserror = "2.0.11"
anyhow = "1.0"
mimalloc = "0.1"
chrono = "0.4"
futures = "0.3"
