[package]
name = "eth-high-perf-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
web3 = "0.19"
arrow = "54.1.0"
parquet = "54.1.0"
bytes = "1.10.0"
crossbeam = "0.8"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.13"
config = "0.15.6"
thiserror = "2.0.11"
anyhow = "1.0"
mimalloc = "0.1"
chrono = "0.4"
futures = "0.3"
warp = "0.3"
